# AdventOfCode2024

./: CMakeLists.txt
aoc1/: CMakeLists.txt  aoc1.c  aoc1.h  main.c  tests.c
aoc10/: CMakeLists.txt  aoc10.c  aoc10.h  main.c  tests.c
aoc11/: CMakeLists.txt  aoc11.c  aoc11.h  main.c  tests.c
aoc12/: CMakeLists.txt  aoc12.c  aoc12.h  main.c  tests.c
aoc13/: CMakeLists.txt  aoc13.c  aoc13.h  main.c  tests.c
aoc14/: CMakeLists.txt  aoc14.c  aoc14.h  main.c  tests.c
aoc15/: aoc15.c  aoc15.h  main.c  tests.c
aoc16/: aoc16.c  aoc16.h  main.c  tests.c
aoc17/: aoc17.c  aoc17.h  main.c  tests.c
aoc18/: aoc18.c  aoc18.h  main.c  tests.c
aoc19/: aoc19.c  aoc19.h  main.c  tests.c
aoc2/: CMakeLists.txt  aoc2.c  aoc2.h  main.c  tests.c
aoc20/: aoc20.c  aoc20.h  main.c  tests.c
aoc21/: aoc21.c  aoc21.h  main.c  tests.c
aoc22/: aoc22.c  aoc22.h  main.c  tests.c
aoc23/: aoc23.c  aoc23.h  main.c  tests.c
aoc24/: aoc24.c  aoc24.h  main.c  tests.c
aoc25/: aoc25.c  aoc25.h  main.c  tests.c
aoc3/: CMakeLists.txt  aoc3.c  aoc3.h  main.c  tests.c
aoc4/: CMakeLists.txt  aoc4.c  aoc4.h  main.c  tests.c
aoc5/: CMakeLists.txt  aoc5.c  aoc5.h  main.c  tests.c
aoc6/: CMakeLists.txt  aoc6.c  aoc6.h  main.c  tests.c
aoc7/: CMakeLists.txt  aoc7.c  aoc7.h  main.c  tests.c
aoc8/: CMakeLists.txt  aoc8.c  aoc8.h  main.c  tests.c
aoc9/: CMakeLists.txt  aoc9.c  aoc9.h  main.c  tests.c
shared/: CMakeLists.txt  aoc_hash_counts.c  aoc_hash_counts.h  aoc_hash_table.c  aoc_hash_table.h  aoc_hash_tree.c  aoc_hash_tree.h  aoc_int_list.c  aoc_int_list.h  aoc_math.c  aoc_math.h  aoc_matrix.c  aoc_matrix.h  aoc_pos.c  aoc_pos.h  aoc_pos_dict.c  aoc_pos_dict.h  aoc_pos_list.c  aoc_pos_list.h  aoc_shared.h  aoc_shared_imports.h  aoc_string.c  aoc_string.h  aocmath.c  aocmath.h  int_list.c  int_list.h  matrix.c  matrix.h  pos.c  pos.h
